# cpp_unit_testing

alarm_clock/: CMakeLists.txt  test.cpp
cpp_basics/: CMakeLists.txt
cpp_basics/const_test/: CMakeLists.txt  constTest.cpp
cpp_basics/construction_test/: CMakeLists.txt  constructionTest.cpp
cpp_basics/include/: ConsterInterface.h
cpp_basics/singleton_test/: CMakeLists.txt  staticTest.cpp
cpp_basics/src/: CMakeLists.txt
cpp_basics/swap_test/: CMakeLists.txt  swapTest.cpp
misc_questions/: CMakeLists.txt
misc_questions/binary/: CMakeLists.txt  binaryTest.cpp
rfid_email/: CMakeLists.txt
rfid_email/include/: RFIDSensor.h  WhoIsHome.h
rfid_email/test/: CMakeLists.txt  FakeRFIDSensor.cpp  FakeRFIDSensor.h  MockRFIDSensor.h  requirements.txt  test.cpp
soundex/: CMakeLists.txt
soundex/soundex_test/: CMakeLists.txt  soundex.h  soundexTest.cpp
