CMAKE_MINIMUM_REQUIRED(VERSION 3.6.1)
PROJECT( cpp_exercises )

SET( CMAKE_CXX_STANDARD 11 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )

ADD_SUBDIRECTORY(const_test)
ADD_SUBDIRECTORY(singleton_test)
ADD_SUBDIRECTORY(construction_test)
ADD_SUBDIRECTORY(swap_test)

LIST( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -g")

INCLUDE_DIRECTORIES(include)

ENABLE_TESTING()
