INCLUDE_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

FIND_LIBRARY( GTEST gtest ${CMAKE_INSTALL_PREFIX} )
FIND_LIBRARY( GMOCK gmock ${CMAKE_INSTALL_PREFIX} )
FIND_LIBRARY( GTEST_MAIN gtest_main ${CMAKE_INSTALL_PREFIX} )


ADD_EXECUTABLE( ConstTest constTest.cpp )
TARGET_LINK_LIBRARIES( ConstTest ${GMOCK} ${GTEST} ${GTEST_MAIN} pthread)

ENABLE_TESTING()

ADD_TEST( NAME ConstTest COMMAND ConstTest )

