
INCLUDE_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/include)

FIND_LIBRARY( GTEST gtest ${CMAKE_INSTALL_PREFIX} )
FIND_LIBRARY( GMOCK gmock ${CMAKE_INSTALL_PREFIX} )
FIND_LIBRARY( GTEST_MAIN gtest_main ${CMAKE_INSTALL_PREFIX} )

ADD_EXECUTABLE( unit_test test.cpp )
TARGET_LINK_LIBRARIES( unit_test ${GMOCK} ${GTEST} ${GTEST_MAIN} pthread)

ENABLE_TESTING()

ADD_TEST( NAME unit_test COMMAND unit_test )

