INCLUDE_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

FIND_LIBRARY( GTEST gtest ${CMAKE_INSTALL_PREFIX} )
FIND_LIBRARY( GMOCK gmock ${CMAKE_INSTALL_PREFIX} )
FIND_LIBRARY( GTEST_MAIN gtest_main ${CMAKE_INSTALL_PREFIX} )

SET( FAKES FakeRFIDSensor.cpp )

ADD_EXECUTABLE( WhoIsHomeTest test.cpp ${FAKES} )
TARGET_LINK_LIBRARIES( WhoIsHomeTest ${GMOCK} ${GTEST} ${GTEST_MAIN} pthread)

ENABLE_TESTING()

ADD_TEST( NAME WhoIsHomeTest COMMAND WhoIsHomeTest )

